Bug 277351 - Internet services (scripted and non-scripted) are empty in current git
Summary: Internet services (scripted and non-scripted) are empty in current git
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Internet Services (other bugs)
Version First Reported In: 2.4-GIT
Platform: Compiled Sources Linux
: NOR major
Target Milestone: 2.4.2
Assignee: Ralf Engels
URL:
Keywords: regression, release_blocker
: 277233 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-08 09:30 UTC by desaparecido
Modified: 2011-07-12 17:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description desaparecido 2011-07-08 09:30:15 UTC
Version:           2.4-GIT (using Devel) 
OS:                Linux

I upgraded my git version to O7O72011 (yesterday) and after that I dont'n have streams in >home>internet>%differents_radios , like ex: SomaFM that have usually inside "Secret Agent", "Sonic Universe", etc. and "Cool Streams Radio", and others (Radio Francaise.... ,etc etc)

Reproducible: Always

Steps to Reproduce:
I restart my amarok session, I reinstalled the radio streams scripts (with "get more scripts" button), I restart my session with differents kernels (I don't know if is relevant)

Actual Results:  
no radio streams in "home>internet>" menus

Expected Results:  
have some differents radios streams in differents menu, like >home>internet>SomaFM>"lot of radios"

OS: Linux (x86_64) release 3.0.0-rc6-mainline
Compiler: gcc
Linux Distribution:  Archlinux (with testing repo activated)
Comment 1 Sven Krohlas 2011-07-09 19:33:00 UTC
All Internet services are broken, as confirmed by a lot of reports in IRC and 2.4.2-beta1 news comments.
Comment 2 Christophe Marin 2011-07-10 14:07:44 UTC
after bisecting:

d4d5940eeaf6d0755331e89fa6ced114d83daee5 is the first bad commit
commit d4d5940eeaf6d0755331e89fa6ced114d83daee5
Author: Ralf Engels <ralf.engels@nokia.com>
Date:   Thu Jun 23 00:28:36 2011 +0200

    Clean up BrowserCategoryList
    Don't reparent widgets if possible. Use StackedWidget
    Have consistent constructors with default for QWidget* parent
    Have a highlight for lists in cases where single-click-activates is not set

:040000 040000 ed474867b6382e21a18a4f1de77f6375d7dc42e7 9cb5244463c87ec59b4d50ba1911a21db1cd2227 M      src
Comment 3 Ralf Engels 2011-07-10 23:23:16 UTC
Git commit 202c49ebf8b5521b0394b4b7c5e816bf4057c8de by Ralf Engels.
Committed on 11/07/2011 at 01:22.
Pushed by rengels into branch 'master'.

Fix Internet services (scripted and non-scripted) are empty

BUG:277351

M  +2    -0    src/browsers/BrowserCategoryList.cpp     
M  +0    -4    src/browsers/servicebrowser/ServiceBrowser.cpp     

http://commits.kde.org/amarok/202c49ebf8b5521b0394b4b7c5e816bf4057c8de
Comment 4 Daniel S. 2011-07-11 16:53:58 UTC
Thank you, but actually just one half of the bug seems to be fixed. The non-scripted services like Ampache, Magnatune, are shown but not the scripted ones. Generally, no scripts are shown in my list of scripts, though I can download them.

(Using the latest git snapshot.)
Comment 5 Christophe Marin 2011-07-11 16:58:53 UTC
Both work here. (tested with french radios, classical streams...)
Comment 6 Kevin Funk 2011-07-12 11:52:22 UTC
*** Bug 277608 has been marked as a duplicate of this bug. ***
Comment 7 Kevin Funk 2011-07-12 17:01:46 UTC
*** Bug 277233 has been marked as a duplicate of this bug. ***