Fix Internet services (scripted and non-scripted) are empty

BUG:277351